Fix repsonsive design issue on smaller devices

--- a/src/components/layout/hero/hero.module.scss
+++ b/src/components/layout/hero/hero.module.scss
@@ -1,3 +1,23 @@
+@import '../../../../node_modules/bootstrap/scss/functions';
+@import '../../../../node_modules/bootstrap/scss/variables';
+@import '../../../../node_modules/bootstrap/scss/mixins';
+
 .hero {
-  height: 50rem !important;
+  height: 100vh;
+
+  @include media-breakpoint-up(md) {
+    height: 50rem !important;
+  }
+}
+
+.profileImage {
+  width: 60%;
+
+  @include media-breakpoint-up(md) {
+    width: 40%;
+  }
+
+  @include media-breakpoint-up(lg) {
+    width: 25%;
+  }
 }
